@startuml Feature12_Class
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80
hide circle

title **Feature 12: Interview Scheduling (Class Diagram)**

note as N1
  Rewritten 15/08/2026: the shared slot pool + candidate
  self-scheduling link was dropped. HR agrees the time by
  phone and enters the session; one session is stored as
  a 1-slot pool so the scoring sheet stays unchanged.
end note

class InterviewScheduleController <<boundary>> {
    - _scheduleService : InterviewScheduleService
    + BookAsync(applicationId : long, dto : Object) : Object
    + GetByJobAsync(jobId : long) : Object
    + CancelAsync(scheduleId : long, dto : Object) : Object
}

class InterviewScheduleService <<control>> {
    - _schedulingRepo : SchedulingRepository
    - _appRepo : ApplicationRepository
    - _criteriaRepo : EvaluationCriteriaRepository
    - _notify : NotificationService
    + BookAsync(companyId : long, userId : long, applicationId : long, dto : Object) : long
    + GetByJobAsync(companyId : long, jobId : long) : List<InterviewSessionDto>
    + CancelAsync(companyId : long, userId : long, scheduleId : long, dto : Object) : void
}

class InterviewSlotPool <<entity>> {
    - poolId : long
    - jobId : long
    - roundNumber : int
    - name : string
    - status : string
}

class InterviewSlot <<entity>> {
    - slotId : long
    - poolId : long
    - startTime : DateTime
    - status : string
}

class InterviewSchedule <<entity>> {
    - scheduleId : long
    - applicationId : long
    - poolId : long
    - roundNumber : int
    - status : string
}

InterviewScheduleController --> InterviewScheduleService : Association
InterviewScheduleService --> InterviewSlotPool : Dependency

InterviewSlotPool "1" *--> "*" InterviewSlot : Composition
InterviewSlotPool "1" *--> "*" InterviewSchedule : Composition

@enduml
